@@ -110,19 +110,21 @@ def format_function_signature(func):
     for arg_name in signature['arg_names']:
         if arg_name in signature['arg_defaults']:
             arg_default = signature['arg_defaults'][arg_name]
-            arg_text_template = "%(arg_name)s=%(arg_default)r"
+            arg_text_template = "{arg_name}={arg_default!r}"
         else:
-            arg_text_template = "%(arg_name)s"
-        args_text.append(arg_text_template % vars())
+            arg_text_template = "{arg_name}"
+        args_text.append(arg_text_template.format(
+                **vars()))
     if 'var_args' in signature:
-        args_text.append("*%(var_args)s" % signature)
+        args_text.append("*{var_args}".format(signature))
     if 'var_kw_args' in signature:
-        args_text.append("**%(var_kw_args)s" % signature)
+        args_text.append("**{var_kw_args}".format(signature))
     signature_args_text = ", ".join(args_text)
 
     func_name = signature['name']
     signature_text = (
-            "%(func_name)s(%(signature_args_text)s)" % vars())
+            "{func_name}({signature_args_text})".format(
+                **vars()))
 
     return signature_text
 
@@ -159,8 +161,9 @@ class TestCase(testtools.testcase.TestCase):
                         example, got, checker_optionflags)
                 msg = "\n".join([
                         "Output received did not match expected output",
-                        "%(diff)s",
-                        ]) % vars()
+                        "{diff}",
+                        ]).format(
+                            **vars())
             raise self.failureException(msg)
 
     assertOutputCheckerMatch = failUnlessOutputCheckerMatch
@@ -193,8 +196,9 @@ class TestCase(testtools.testcase.TestCase):
             if msg is None:
                 msg = (
                         "Traceback did not lead to original function"
-                        " %(function)s"
-                        ) % vars()
+                        " {function}"
+                        ).format(
+                            **vars())
             raise self.failureException(msg)
 
     assertFunctionInTraceback = failUnlessFunctionInTraceback
@@ -237,12 +241,13 @@ class TestCase(testtools.testcase.TestCase):
                 second_signature_text = format_function_signature(second)
                 msg = (textwrap.dedent("""\
                         Function signatures do not match:
-                            %(first_signature)r != %(second_signature)r
+                            {first_signature!r} != {second_signature!r}
                         Expected:
-                            %(first_signature_text)s
+                            {first_signature_text}
                         Got:
-                            %(second_signature_text)s""")
-                        ) % vars()
+                            {second_signature_text}""")
+                        ).format(
+                            **vars())
             raise self.failureException(msg)
 
     assertFunctionSignatureMatch = failUnlessFunctionSignatureMatch
