@@ -380,8 +380,9 @@ class DaemonRunner_usage_exit_TestCase(DaemonRunner_BaseTestCase):
         progname = self.test_program_name
         argv = [self.test_program_path]
         expected_stderr_output = """\
-                usage: %(progname)s ...
-                """ % vars()
+                usage: {progname} ...
+                """.format(
+                    **vars())
         self.assertRaises(
                 SystemExit,
                 instance._usage_exit, argv)
@@ -500,8 +501,9 @@ class DaemonRunner_do_action_start_TestCase(DaemonRunner_BaseTestCase):
         instance = self.test_instance
         current_pid = self.scenario['pid']
         expected_stderr = """\
-                started with pid %(current_pid)d
-                """ % vars()
+                started with pid {current_pid:d}
+                """.format(
+                    **vars())
         instance.do_action()
         self.assertOutputCheckerMatch(
                 expected_stderr, self.fake_stderr.getvalue())
